# Stargate

./: CMakeLists.txt  Makefile  README.md  imports.S  main.c
include/: loadmodule_patch.h  nodrm_patch.h
src/: chn_iso.c  gamefix.c  hide.c  io_patch.c  key_decrypt.c  loadmodule_patch.c  nodrm_patch.c
